--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   intl: ^0.16.0
   firebase_storage: ^3.1.1
   cloud_firestore: ^0.12.10+2
+  carousel_slider: ^1.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
